refactor client request backend to improve protected request builder implementation